# code_conversion

llm-code-pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-api.txt  requirements-inference.txt  requirements.txt  run_streamlit.bat  run_streamlit.sh  streamlit_app.py  test_client_sdk.py  test_code_conversion.py  test_local.py  test_real_inference.py
llm-code-pipeline/api/: __init__.py  main.py
llm-code-pipeline/api/routes/: __init__.py  chat.py  completions.py  health.py  models.py
llm-code-pipeline/api/schemas/: __init__.py  chat.py  common.py  completion.py  response_format.py
llm-code-pipeline/api/utils/: __init__.py  auth.py  error_handler.py  logging.py  validators.py
llm-code-pipeline/clients/: __init__.py
llm-code-pipeline/clients/js/: client.d.ts  client.js  package.json
llm-code-pipeline/clients/python/: __init__.py  client.py
llm-code-pipeline/config/: __init__.py  settings.py
llm-code-pipeline/conversion/: cs2java_agent.py
llm-code-pipeline/deployment/: docker-compose.yaml
llm-code-pipeline/deployment/docker/: Dockerfile.api  Dockerfile.inference
llm-code-pipeline/deployment/kubernetes/: api.yaml  inference.yaml
llm-code-pipeline/inference/: __init__.py  json_formatter.py  model_manager.py  server.py  tokenizer_service.py  transformers_runner.py  vllm_runner.py
llm-code-pipeline/models/: __init__.py  convert.py  download.py  registry.json  registry.py
llm-code-pipeline/tests/: __init__.py  conftest.py  test_api.py  test_inference.py  test_json_mode.py
